--- a/extra-example/www/index.html
+++ b/extra-example/www/index.html
@@ -6,17 +6,29 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
-    <title>{{page_title}} - {{site_title}}</title>
+    <title>Home - Lawrence Jones Design - Lawrence Jones Design</title>
   </head>
   <body>
 <div class="content">
-  {{> nav}}
+  <nav>
+  <ul id="nav">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="credits.html">Credits</a></li>
+  </ul>
+</nav>
     <article>
-        {{{yield}}}
+        
+<p><img src="images/screen.png" alt="dark sky" title="" /></p>
+
+<h1> Welcome</h1>
+
+<p>Welcome to my website</p>
+
     </article>
     <footer>
       <hr>
-      <p>&copy; Copyright 2019 {{site_title}}. Change your site_title in the global meta to change the copyright.</p>
+      <p>&copy; Copyright 2019 Lawrence Jones Design. Change your site_title in the global meta to change the copyright.</p>
     </footer>
   </div>
   </body>
