fix www readme file

--- a/extra-example/www/README.html
+++ b/extra-example/www/README.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
-    <title>Example Zodiac Site - Example Zodiac Site</title>
-  </head>
-  <body>
-<div class="content">
-  <nav>
-  <ul id="nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="credits.html">Credits</a></li>
-  </ul>
-</nav>
-    <article>
-        
-<p>This README.md file starts out in the extra-example/site folder. </p>
-
-    </article>
-    <footer>
-      <hr>
-      <p>&copy; Copyright 2019 Example Zodiac Site. Change your site_title in the global meta to change the copyright.</p>
-    </footer>
-  </div>
-  </body>
-</html>
+This folder is an example of what is generated from the site folder in the extra-example directory after you run `zod site www`. After making changes to the site folder contents, cd into the extra-example directory and run `zod site www` and you will create a new output. (This README.md file will be deleted after the first update.)
